; ModuleID = '/home/carl/AnghaBench/mpv/player/extr_client.c_send_reply.c'
source_filename = "/home/carl/AnghaBench/mpv/player/extr_client.c_send_reply.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.mpv_handle = type { i64, i32 }
%struct.mpv_event = type { i32 }

@llvm.used = appending global [1 x i8*] [i8* bitcast (void (%struct.mpv_handle*, i32, %struct.mpv_event*)* @send_reply to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal void @send_reply(%struct.mpv_handle* %0, i32 %1, %struct.mpv_event* %2) #0 {
  %4 = alloca %struct.mpv_handle*, align 8
  %5 = alloca i32, align 4
  %6 = alloca %struct.mpv_event*, align 8
  store %struct.mpv_handle* %0, %struct.mpv_handle** %4, align 8
  store i32 %1, i32* %5, align 4
  store %struct.mpv_event* %2, %struct.mpv_event** %6, align 8
  %7 = load i32, i32* %5, align 4
  %8 = load %struct.mpv_event*, %struct.mpv_event** %6, align 8
  %9 = getelementptr inbounds %struct.mpv_event, %struct.mpv_event* %8, i32 0, i32 0
  store i32 %7, i32* %9, align 4
  %10 = load %struct.mpv_handle*, %struct.mpv_handle** %4, align 8
  %11 = getelementptr inbounds %struct.mpv_handle, %struct.mpv_handle* %10, i32 0, i32 1
  %12 = call i32 @pthread_mutex_lock(i32* %11)
  %13 = load %struct.mpv_handle*, %struct.mpv_handle** %4, align 8
  %14 = getelementptr inbounds %struct.mpv_handle, %struct.mpv_handle* %13, i32 0, i32 0
  %15 = load i64, i64* %14, align 8
  %16 = icmp sgt i64 %15, 0
  %17 = zext i1 %16 to i32
  %18 = call i32 @assert(i32 %17)
  %19 = load %struct.mpv_handle*, %struct.mpv_handle** %4, align 8
  %20 = getelementptr inbounds %struct.mpv_handle, %struct.mpv_handle* %19, i32 0, i32 0
  %21 = load i64, i64* %20, align 8
  %22 = add nsw i64 %21, -1
  store i64 %22, i64* %20, align 8
  %23 = load %struct.mpv_handle*, %struct.mpv_handle** %4, align 8
  %24 = load %struct.mpv_event*, %struct.mpv_event** %6, align 8
  %25 = getelementptr inbounds %struct.mpv_event, %struct.mpv_event* %24, i32 0, i32 0
  %26 = load i32, i32* %25, align 4
  %27 = call i64 @append_event(%struct.mpv_handle* %23, i32 %26, i32 0)
  %28 = icmp slt i64 %27, 0
  br i1 %28, label %29, label %31

29:                                               ; preds = %3
  %30 = call i32 (...) @abort() #3
  unreachable

31:                                               ; preds = %3
  %32 = load %struct.mpv_handle*, %struct.mpv_handle** %4, align 8
  %33 = getelementptr inbounds %struct.mpv_handle, %struct.mpv_handle* %32, i32 0, i32 1
  %34 = call i32 @pthread_mutex_unlock(i32* %33)
  ret void
}

declare dso_local i32 @pthread_mutex_lock(i32*) #1

declare dso_local i32 @assert(i32) #1

declare dso_local i64 @append_event(%struct.mpv_handle*, i32, i32) #1

; Function Attrs: noreturn
declare dso_local i32 @abort(...) #2

declare dso_local i32 @pthread_mutex_unlock(i32*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
